# ultralight-godot

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-gdextension.yaml  build-mini-browser.yaml  build.yaml
.vcpkg/ports/godot-cpp/: install.patch  portfile.cmake  static_cpp.patch  usage  vcpkg.json
.vcpkg/ports/godot-cpp/cmake/: godot-cpp-config.cmake  install.cmake
mini-browser/: CMakeLists.txt  bin2cpp.cmake
mini-browser/assets/ui/: anchorme.js  ui.css  ui.html  ui.js  welcome.html
mini-browser/src/: Browser.cpp  Browser.h  Page.cpp  Page.h  UI.cpp  UI.h  main.cpp
mini-browser/src/detail/: Filesystem.hpp  physfs.hpp  setup.hpp
samples/Sample 1 - Load Html And Bind CSharp Callback/: .gitignore  Main.cs  README.md  icon.svg.import  project.godot  ultralight-view.gdextension
samples/Sample 1 - Load Html And Bind CSharp Callback/src/: Main.cs  demo.sln  main.tscn  project.godot  ultralight-view.gdextension
samples/Sample 2 - Inventory System/: .gitignore  README.md
samples/Sample 2 - Inventory System/src/: Inventory System.csproj  Inventory System.sln  Inventory.cs  ItemDB.cs  Main.cs  icon.svg.import  project.godot
samples/Sample 2 - Inventory System/src/webfe/: README.md  index.html  package-lock.json  package.json  vite.config.js
samples/Sample 2 - Inventory System/src/webfe/src/: App.vue  main.js
samples/Sample 2 - Inventory System/src/webfe/src/assets/: main.css
samples/Sample 2 - Inventory System/src/webfe/src/assets/images/: FrostBite.webp.import  LuckyPiggybank.webp.import  LunarArmor.webp.import  QQIcon.webp.import
samples/Sample 2 - Inventory System/src/webfe/src/components/: Inventory.vue  Trash.vue
samples/Sample 2 - Inventory System/src/webfe/src/gridstack/: GridStackEngine.ts
samples/Sample3 - 3D/: README.md
samples/Sample3 - 3D/src/: 3D.csproj  3D.sln  Gui.cs  Main.cs  gui.tscn  icon.svg.import  main.tscn  project.godot  龙珠体ZHS-Regular.ttf.import
ultralight-view/: .gitignore  CMakeLists.txt
ultralight-view/doc_classes/: UltralightSingleton.xml  UltralightView.xml  make_doc_source.py
ultralight-view/src/: register_types.cpp  setup.hpp
ultralight-view/src/gdbind/: Callable.hpp  Filesystem.hpp  FontLoader.hpp  Logger.hpp  PackedByteArraySurface.hpp  Shader.hpp  UltralightRenderer.hpp  UltralightSingleton.hpp  UltralightView.hpp  cast.hpp  debug.hpp
ultralight-view/src/gdbind/detail/: cast.hpp  cast__def.hpp  cast__impl.hpp  godot_callable.hpp  godot_callable__def.hpp  godot_callable__impl.hpp  godot_callable__implement.hpp  godot_object.hpp  js_callable.hpp  js_callable_trampoline.hpp  native_function.hpp
ultralight-view/src/gdbind/events/: KeyEvent.hpp  MouseEvent.hpp
ultralight-view/src/gdbind/listener/: DownloadListener.hpp  LoadListener.hpp  NetworkListener.hpp  ViewListener.hpp
